# KanbanSystem

./: .gitignore  CMakeLists.txt  Codigo.cpp  Codigo.h  CodigoTeste.cpp  CodigoTeste.h  Email.cpp  Email.h  KanbanSystem.cbp  KanbanSystem.depend  KanbanSystem.layout  Limite.cpp  README.md  Senha.cpp  Teste.cpp  Teste.h  Texto.cpp  Texto.h  index.html  kanban.db  main.cpp
doxygen/: doxyfile
doxygen/html/: _cartao_8h_source.html  _cntr_a_interface_8h_source.html  _cntr_i_a_autenticacao_8h_source.html  _cntr_i_a_conta_8h_source.html  _cntr_i_s_autenticacao_8h_source.html  _cntr_i_s_conta_8h_source.html  _codigo_8h_source.html  _codigo_teste_8h_source.html  _coluna_8h_source.html  _conta_8h_source.html  _container_conta_8h_source.html  _email_8h_source.html  _interfaces_8h_source.html  _limite_8h_source.html  _limite_teste_8h_source.html  _quadro_8h_source.html  _senha_8h_source.html  _stubs_8h_source.html  _texto_8h_source.html  annotated.html  annotated_dup.js  class_cartao-members.html  class_cartao.html  class_cartao.js  class_cntr_a_interface-members.html  class_cntr_a_interface.html  class_cntr_a_interface.js  class_cntr_i_a_autenticacao-members.html  class_cntr_i_a_autenticacao.html  class_cntr_i_a_autenticacao.js  class_cntr_i_a_conta-members.html  class_cntr_i_a_conta.html  class_cntr_i_a_conta.js  class_cntr_i_s_autenticacao-members.html  class_cntr_i_s_autenticacao.html  class_cntr_i_s_autenticacao.js  class_cntr_i_s_conta-members.html  class_cntr_i_s_conta.html  class_cntr_i_s_conta.js  class_codigo-members.html  (+118 more)
doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js
include/: Coluna.h  Email.h  Interfaces.h  Stubs.h
include/containers/: ContainerConta.h
include/controladoras/: CntrAInterface.h  CntrIAAutenticacao.h  CntrIAConta.h  CntrISAutenticacao.h  CntrISConta.h
include/dominios/: Codigo.h  CodigoTeste.h  Coluna.h  Email.h  Limite.h  LimiteTeste.h  Senha.h  Texto.h
include/entidades/: Cartao.h  Conta.h  Quadro.h
src/: Coluna.cpp  Stubs.cpp  main.cpp
src/containers/: ContainerConta.cpp
src/controladoras/: CntrAInterface.cpp  CntrIAAutenticacao.cpp  CntrIAConta.cpp  CntrISAutenticacao.cpp  CntrISConta.cpp
src/dominios/: Codigo.cpp  CodigoTeste.cpp  Coluna.cpp  Email.cpp  Limite.cpp  LimiteTeste.cpp  Senha.cpp  Texto.cpp
src/entidades/: Cartao.cpp  Conta.cpp  Quadro.cpp
test/dominios/: CodigoTeste.cpp  CodigoTeste.h  ColunaTeste.cpp  ColunaTeste.h  EmailTeste.cpp  EmailTeste.h  LimiteTeste.cpp  LimiteTeste.h  SenhaTeste.cpp  SenhaTeste.h  TextoTeste.cpp  TextoTeste.h
test/entidades/: CartaoTeste.cpp  CartaoTeste.h  ContaTeste.cpp  ContaTeste.h  QuadroTeste.cpp  QuadroTeste.h
